# Linux-Overlay-Sight-LOS

./: .gitignore  README.md  README_EN.md  README_RU.md  aim_overlay.py  pyproject.toml  run.sh  setup.sh
.github/workflows/: ci.yml  release.yml
packaging/: linux-overlay-sight.desktop
packaging/appimage/: build.sh  entrypoint.sh
packaging/aur/: .SRCINFO  PKGBUILD  linux-overlay-sight.install
packaging/aur-git/: PKGBUILD
